PA3/y.output
Terminals unused in grammar

   T_Continue
   T_LeftBracket
   T_RightBracket
   T_Public
   T_Private
   T_Static
   T_Class
   LOWEST
   LOWER_THAN_ELSE


State 128 conflicts: 12 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: single_declaration
    5     | function_definition

    6 single_declaration: type_specifier T_Identifier T_Semicolon

    7 type_specifier: T_Void
    8               | T_Int
    9               | T_Bool

   10 function_definition: function_prototype compound_statement_with_scope
   11                    | function_prototype T_Semicolon

   12 function_prototype: function_prototype_header T_RightParen

   13 function_prototype_header: type_specifier T_Identifier T_LeftParen
   14                          | type_specifier T_Identifier T_LeftParen parameter_declaration_list

   15 parameter_declaration_list: parameter_declaration_list T_Comma paramater_declaraion
   16                           | paramater_declaraion

   17 paramater_declaraion: type_specifier T_Identifier

   18 compound_statement_with_scope: T_LeftBrace statement_list T_RightBrace
   19                              | T_LeftBrace T_RightBrace

   20 statement_list: statement_list statement
   21               | statement

   22 statement: compound_statement_with_scope
   23          | simple_statement
   24          | iteration_statement
   25          | return_statement
   26          | decl_statement
   27          | break_statement

   28 simple_statement: expression_statement
   29                 | selection_statement

   30 expression_statement: T_Semicolon
   31                     | expression T_Semicolon

   32 selection_statement: T_If T_LeftParen expression T_RightParen compound_statement_with_scope
   33                    | T_If T_LeftParen expression T_RightParen compound_statement_with_scope T_Else compound_statement_with_scope

   34 iteration_statement: while_statement
   35                    | for_statement

   36 while_statement: T_While T_LeftParen condition T_RightParen statement

   37 for_statement: T_For T_LeftParen expression_statement expression_statement expression T_RightParen statement

   38 condition: expression

   39 return_statement: T_Return expression_statement

   40 decl_statement: single_declaration

   41 break_statement: T_Break T_Semicolon

   42 expression: assignment_expression
   43           | arithmetic_expression
   44           | relational_expression
   45           | equality_expression
   46           | logical_expression
   47           | unary_expression

   48 assignment_expression: unary_expression assignment_operator expression

   49 assignment_operator: T_Equal
   50                    | T_MulAssign
   51                    | T_DivAssign
   52                    | T_AddAssign
   53                    | T_SubAssign

   54 arithmetic_expression: expression T_Plus expression
   55                      | expression T_Dash expression
   56                      | expression T_Star expression
   57                      | expression T_Slash expression

   58 relational_expression: expression T_LeftAngle expression
   59                      | expression T_RightAngle expression
   60                      | expression T_LessEqual expression
   61                      | expression T_GreaterEqual expression

   62 equality_expression: expression T_EQ expression
   63                    | expression T_NE expression

   64 logical_expression: expression T_And expression
   65                   | expression T_Or expression

   66 postfix_expression: primary_expression
   67                   | postfix_expression T_Inc
   68                   | postfix_expression T_Dec
   69                   | func_call_expression

   70 func_call_expression: function_call_header_with_parameters T_RightParen
   71                     | function_call_header_no_parameters T_RightParen

   72 function_call_header_no_parameters: function_identifier T_LeftParen T_Void
   73                                   | function_identifier T_LeftParen

   74 function_call_header_with_parameters: function_identifier T_LeftParen arg_list

   75 arg_list: assignment_expression
   76         | arg_list T_Comma assignment_expression
   77         | primary_expression
   78         | arg_list T_Comma primary_expression

   79 function_identifier: T_Identifier

   80 primary_expression: T_Identifier
   81                   | constant
   82                   | T_LeftParen expression T_RightParen

   83 unary_expression: postfix_expression
   84                 | T_Inc unary_expression
   85                 | T_Dec unary_expression
   86                 | T_Plus unary_expression
   87                 | T_Dash unary_expression

   88 constant: T_IntConstant
   89         | T_BoolConstant


Terminals, with rules where they appear

$end (0) 0
error (256)
T_Void (258) 7 72
T_Bool (259) 9
T_Int (260) 8
T_LessEqual (261) 60
T_GreaterEqual (262) 61
T_EQ (263) 62
T_NE (264) 63
T_LeftAngle (265) 58
T_RightAngle (266) 59
T_And (267) 64
T_Or (268) 65
T_Equal (269) 49
T_MulAssign (270) 50
T_DivAssign (271) 51
T_AddAssign (272) 52
T_SubAssign (273) 53
T_While (274) 36
T_For (275) 37
T_If (276) 32 33
T_Else (277) 33
T_Return (278) 39
T_Break (279) 41
T_Continue (280)
T_Inc (281) 67 84
T_Dec (282) 68 85
T_Semicolon (283) 6 11 30 31 41
T_Comma (284) 15 76 78
T_Dash (285) 55 87
T_Plus (286) 54 86
T_Star (287) 56
T_Slash (288) 57
T_LeftParen (289) 13 14 32 33 36 37 72 73 74 82
T_RightParen (290) 12 32 33 36 37 70 71 82
T_LeftBracket (291)
T_RightBracket (292)
T_LeftBrace (293) 18 19
T_RightBrace (294) 18 19
T_Public (295)
T_Private (296)
T_Static (297)
T_Class (298)
T_Identifier (299) 6 13 14 17 79 80
T_IntConstant (300) 88
T_BoolConstant (301) 89
LOWEST (302)
LOWER_THAN_ELSE (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Program (50)
    on left: 1, on right: 0
DeclList (51)
    on left: 2 3, on right: 1 2
Decl (52)
    on left: 4 5, on right: 2 3
single_declaration (53)
    on left: 6, on right: 4 40
type_specifier (54)
    on left: 7 8 9, on right: 6 13 14 17
function_definition (55)
    on left: 10 11, on right: 5
function_prototype (56)
    on left: 12, on right: 10 11
function_prototype_header (57)
    on left: 13 14, on right: 12
parameter_declaration_list (58)
    on left: 15 16, on right: 14 15
paramater_declaraion (59)
    on left: 17, on right: 15 16
compound_statement_with_scope (60)
    on left: 18 19, on right: 10 22 32 33
statement_list (61)
    on left: 20 21, on right: 18 20
statement (62)
    on left: 22 23 24 25 26 27, on right: 20 21 36 37
simple_statement (63)
    on left: 28 29, on right: 23
expression_statement (64)
    on left: 30 31, on right: 28 37 39
selection_statement (65)
    on left: 32 33, on right: 29
iteration_statement (66)
    on left: 34 35, on right: 24
while_statement (67)
    on left: 36, on right: 34
for_statement (68)
    on left: 37, on right: 35
condition (69)
    on left: 38, on right: 36
return_statement (70)
    on left: 39, on right: 25
decl_statement (71)
    on left: 40, on right: 26
break_statement (72)
    on left: 41, on right: 27
expression (73)
    on left: 42 43 44 45 46 47, on right: 31 32 33 37 38 48 54 55 56
    57 58 59 60 61 62 63 64 65 82
assignment_expression (74)
    on left: 48, on right: 42 75 76
assignment_operator (75)
    on left: 49 50 51 52 53, on right: 48
arithmetic_expression (76)
    on left: 54 55 56 57, on right: 43
relational_expression (77)
    on left: 58 59 60 61, on right: 44
equality_expression (78)
    on left: 62 63, on right: 45
logical_expression (79)
    on left: 64 65, on right: 46
postfix_expression (80)
    on left: 66 67 68 69, on right: 67 68 83
func_call_expression (81)
    on left: 70 71, on right: 69
function_call_header_no_parameters (82)
    on left: 72 73, on right: 71
function_call_header_with_parameters (83)
    on left: 74, on right: 70
arg_list (84)
    on left: 75 76 77 78, on right: 74 76 78
function_identifier (85)
    on left: 79, on right: 72 73 74
primary_expression (86)
    on left: 80 81 82, on right: 66 77 78
unary_expression (87)
    on left: 83 84 85 86 87, on right: 47 48 84 85 86 87
constant (88)
    on left: 88 89, on right: 81


State 0

    0 $accept: . Program $end

    T_Void  shift, and go to state 1
    T_Bool  shift, and go to state 2
    T_Int   shift, and go to state 3

    Program                    go to state 4
    DeclList                   go to state 5
    Decl                       go to state 6
    single_declaration         go to state 7
    type_specifier             go to state 8
    function_definition        go to state 9
    function_prototype         go to state 10
    function_prototype_header  go to state 11


State 1

    7 type_specifier: T_Void .

    $default  reduce using rule 7 (type_specifier)


State 2

    9 type_specifier: T_Bool .

    $default  reduce using rule 9 (type_specifier)


State 3

    8 type_specifier: T_Int .

    $default  reduce using rule 8 (type_specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void  shift, and go to state 1
    T_Bool  shift, and go to state 2
    T_Int   shift, and go to state 3

    $default  reduce using rule 1 (Program)

    Decl                       go to state 13
    single_declaration         go to state 7
    type_specifier             go to state 8
    function_definition        go to state 9
    function_prototype         go to state 10
    function_prototype_header  go to state 11


State 6

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 7

    4 Decl: single_declaration .

    $default  reduce using rule 4 (Decl)


State 8

    6 single_declaration: type_specifier . T_Identifier T_Semicolon
   13 function_prototype_header: type_specifier . T_Identifier T_LeftParen
   14                          | type_specifier . T_Identifier T_LeftParen parameter_declaration_list

    T_Identifier  shift, and go to state 14


State 9

    5 Decl: function_definition .

    $default  reduce using rule 5 (Decl)


State 10

   10 function_definition: function_prototype . compound_statement_with_scope
   11                    | function_prototype . T_Semicolon

    T_Semicolon  shift, and go to state 15
    T_LeftBrace  shift, and go to state 16

    compound_statement_with_scope  go to state 17


State 11

   12 function_prototype: function_prototype_header . T_RightParen

    T_RightParen  shift, and go to state 18


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 14

    6 single_declaration: type_specifier T_Identifier . T_Semicolon
   13 function_prototype_header: type_specifier T_Identifier . T_LeftParen
   14                          | type_specifier T_Identifier . T_LeftParen parameter_declaration_list

    T_Semicolon  shift, and go to state 19
    T_LeftParen  shift, and go to state 20


State 15

   11 function_definition: function_prototype T_Semicolon .

    $default  reduce using rule 11 (function_definition)


State 16

   18 compound_statement_with_scope: T_LeftBrace . statement_list T_RightBrace
   19                              | T_LeftBrace . T_RightBrace

    T_Void          shift, and go to state 1
    T_Bool          shift, and go to state 2
    T_Int           shift, and go to state 3
    T_While         shift, and go to state 21
    T_For           shift, and go to state 22
    T_If            shift, and go to state 23
    T_Return        shift, and go to state 24
    T_Break         shift, and go to state 25
    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Semicolon     shift, and go to state 28
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_LeftBrace     shift, and go to state 16
    T_RightBrace    shift, and go to state 32
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    single_declaration                    go to state 36
    type_specifier                        go to state 37
    compound_statement_with_scope         go to state 38
    statement_list                        go to state 39
    statement                             go to state 40
    simple_statement                      go to state 41
    expression_statement                  go to state 42
    selection_statement                   go to state 43
    iteration_statement                   go to state 44
    while_statement                       go to state 45
    for_statement                         go to state 46
    return_statement                      go to state 47
    decl_statement                        go to state 48
    break_statement                       go to state 49
    expression                            go to state 50
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 17

   10 function_definition: function_prototype compound_statement_with_scope .

    $default  reduce using rule 10 (function_definition)


State 18

   12 function_prototype: function_prototype_header T_RightParen .

    $default  reduce using rule 12 (function_prototype)


State 19

    6 single_declaration: type_specifier T_Identifier T_Semicolon .

    $default  reduce using rule 6 (single_declaration)


State 20

   13 function_prototype_header: type_specifier T_Identifier T_LeftParen .
   14                          | type_specifier T_Identifier T_LeftParen . parameter_declaration_list

    T_Void  shift, and go to state 1
    T_Bool  shift, and go to state 2
    T_Int   shift, and go to state 3

    $default  reduce using rule 13 (function_prototype_header)

    type_specifier              go to state 64
    parameter_declaration_list  go to state 65
    paramater_declaraion        go to state 66


State 21

   36 while_statement: T_While . T_LeftParen condition T_RightParen statement

    T_LeftParen  shift, and go to state 67


State 22

   37 for_statement: T_For . T_LeftParen expression_statement expression_statement expression T_RightParen statement

    T_LeftParen  shift, and go to state 68


State 23

   32 selection_statement: T_If . T_LeftParen expression T_RightParen compound_statement_with_scope
   33                    | T_If . T_LeftParen expression T_RightParen compound_statement_with_scope T_Else compound_statement_with_scope

    T_LeftParen  shift, and go to state 69


State 24

   39 return_statement: T_Return . expression_statement

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Semicolon     shift, and go to state 28
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    expression_statement                  go to state 70
    expression                            go to state 50
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 25

   41 break_statement: T_Break . T_Semicolon

    T_Semicolon  shift, and go to state 71


State 26

   84 unary_expression: T_Inc . unary_expression

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 72
    constant                              go to state 63


State 27

   85 unary_expression: T_Dec . unary_expression

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 73
    constant                              go to state 63


State 28

   30 expression_statement: T_Semicolon .

    $default  reduce using rule 30 (expression_statement)


State 29

   87 unary_expression: T_Dash . unary_expression

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 74
    constant                              go to state 63


State 30

   86 unary_expression: T_Plus . unary_expression

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 75
    constant                              go to state 63


State 31

   82 primary_expression: T_LeftParen . expression T_RightParen

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    expression                            go to state 76
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 32

   19 compound_statement_with_scope: T_LeftBrace T_RightBrace .

    $default  reduce using rule 19 (compound_statement_with_scope)


State 33

   79 function_identifier: T_Identifier .
   80 primary_expression: T_Identifier .

    T_LeftParen  reduce using rule 79 (function_identifier)
    $default     reduce using rule 80 (primary_expression)


State 34

   88 constant: T_IntConstant .

    $default  reduce using rule 88 (constant)


State 35

   89 constant: T_BoolConstant .

    $default  reduce using rule 89 (constant)


State 36

   40 decl_statement: single_declaration .

    $default  reduce using rule 40 (decl_statement)


State 37

    6 single_declaration: type_specifier . T_Identifier T_Semicolon

    T_Identifier  shift, and go to state 77


State 38

   22 statement: compound_statement_with_scope .

    $default  reduce using rule 22 (statement)


State 39

   18 compound_statement_with_scope: T_LeftBrace statement_list . T_RightBrace
   20 statement_list: statement_list . statement

    T_Void          shift, and go to state 1
    T_Bool          shift, and go to state 2
    T_Int           shift, and go to state 3
    T_While         shift, and go to state 21
    T_For           shift, and go to state 22
    T_If            shift, and go to state 23
    T_Return        shift, and go to state 24
    T_Break         shift, and go to state 25
    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Semicolon     shift, and go to state 28
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_LeftBrace     shift, and go to state 16
    T_RightBrace    shift, and go to state 78
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    single_declaration                    go to state 36
    type_specifier                        go to state 37
    compound_statement_with_scope         go to state 38
    statement                             go to state 79
    simple_statement                      go to state 41
    expression_statement                  go to state 42
    selection_statement                   go to state 43
    iteration_statement                   go to state 44
    while_statement                       go to state 45
    for_statement                         go to state 46
    return_statement                      go to state 47
    decl_statement                        go to state 48
    break_statement                       go to state 49
    expression                            go to state 50
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 40

   21 statement_list: statement .

    $default  reduce using rule 21 (statement_list)


State 41

   23 statement: simple_statement .

    $default  reduce using rule 23 (statement)


State 42

   28 simple_statement: expression_statement .

    $default  reduce using rule 28 (simple_statement)


State 43

   29 simple_statement: selection_statement .

    $default  reduce using rule 29 (simple_statement)


State 44

   24 statement: iteration_statement .

    $default  reduce using rule 24 (statement)


State 45

   34 iteration_statement: while_statement .

    $default  reduce using rule 34 (iteration_statement)


State 46

   35 iteration_statement: for_statement .

    $default  reduce using rule 35 (iteration_statement)


State 47

   25 statement: return_statement .

    $default  reduce using rule 25 (statement)


State 48

   26 statement: decl_statement .

    $default  reduce using rule 26 (statement)


State 49

   27 statement: break_statement .

    $default  reduce using rule 27 (statement)


State 50

   31 expression_statement: expression . T_Semicolon
   54 arithmetic_expression: expression . T_Plus expression
   55                      | expression . T_Dash expression
   56                      | expression . T_Star expression
   57                      | expression . T_Slash expression
   58 relational_expression: expression . T_LeftAngle expression
   59                      | expression . T_RightAngle expression
   60                      | expression . T_LessEqual expression
   61                      | expression . T_GreaterEqual expression
   62 equality_expression: expression . T_EQ expression
   63                    | expression . T_NE expression
   64 logical_expression: expression . T_And expression
   65                   | expression . T_Or expression

    T_LessEqual     shift, and go to state 80
    T_GreaterEqual  shift, and go to state 81
    T_EQ            shift, and go to state 82
    T_NE            shift, and go to state 83
    T_LeftAngle     shift, and go to state 84
    T_RightAngle    shift, and go to state 85
    T_And           shift, and go to state 86
    T_Or            shift, and go to state 87
    T_Semicolon     shift, and go to state 88
    T_Dash          shift, and go to state 89
    T_Plus          shift, and go to state 90
    T_Star          shift, and go to state 91
    T_Slash         shift, and go to state 92


State 51

   42 expression: assignment_expression .

    $default  reduce using rule 42 (expression)


State 52

   43 expression: arithmetic_expression .

    $default  reduce using rule 43 (expression)


State 53

   44 expression: relational_expression .

    $default  reduce using rule 44 (expression)


State 54

   45 expression: equality_expression .

    $default  reduce using rule 45 (expression)


State 55

   46 expression: logical_expression .

    $default  reduce using rule 46 (expression)


State 56

   67 postfix_expression: postfix_expression . T_Inc
   68                   | postfix_expression . T_Dec
   83 unary_expression: postfix_expression .

    T_Inc  shift, and go to state 93
    T_Dec  shift, and go to state 94

    $default  reduce using rule 83 (unary_expression)


State 57

   69 postfix_expression: func_call_expression .

    $default  reduce using rule 69 (postfix_expression)


State 58

   71 func_call_expression: function_call_header_no_parameters . T_RightParen

    T_RightParen  shift, and go to state 95


State 59

   70 func_call_expression: function_call_header_with_parameters . T_RightParen

    T_RightParen  shift, and go to state 96


State 60

   72 function_call_header_no_parameters: function_identifier . T_LeftParen T_Void
   73                                   | function_identifier . T_LeftParen
   74 function_call_header_with_parameters: function_identifier . T_LeftParen arg_list

    T_LeftParen  shift, and go to state 97


State 61

   66 postfix_expression: primary_expression .

    $default  reduce using rule 66 (postfix_expression)


State 62

   47 expression: unary_expression .
   48 assignment_expression: unary_expression . assignment_operator expression

    T_Equal      shift, and go to state 98
    T_MulAssign  shift, and go to state 99
    T_DivAssign  shift, and go to state 100
    T_AddAssign  shift, and go to state 101
    T_SubAssign  shift, and go to state 102

    $default  reduce using rule 47 (expression)

    assignment_operator  go to state 103


State 63

   81 primary_expression: constant .

    $default  reduce using rule 81 (primary_expression)


State 64

   17 paramater_declaraion: type_specifier . T_Identifier

    T_Identifier  shift, and go to state 104


State 65

   14 function_prototype_header: type_specifier T_Identifier T_LeftParen parameter_declaration_list .
   15 parameter_declaration_list: parameter_declaration_list . T_Comma paramater_declaraion

    T_Comma  shift, and go to state 105

    $default  reduce using rule 14 (function_prototype_header)


State 66

   16 parameter_declaration_list: paramater_declaraion .

    $default  reduce using rule 16 (parameter_declaration_list)


State 67

   36 while_statement: T_While T_LeftParen . condition T_RightParen statement

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    condition                             go to state 106
    expression                            go to state 107
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 68

   37 for_statement: T_For T_LeftParen . expression_statement expression_statement expression T_RightParen statement

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Semicolon     shift, and go to state 28
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    expression_statement                  go to state 108
    expression                            go to state 50
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 69

   32 selection_statement: T_If T_LeftParen . expression T_RightParen compound_statement_with_scope
   33                    | T_If T_LeftParen . expression T_RightParen compound_statement_with_scope T_Else compound_statement_with_scope

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    expression                            go to state 109
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 70

   39 return_statement: T_Return expression_statement .

    $default  reduce using rule 39 (return_statement)


State 71

   41 break_statement: T_Break T_Semicolon .

    $default  reduce using rule 41 (break_statement)


State 72

   84 unary_expression: T_Inc unary_expression .

    $default  reduce using rule 84 (unary_expression)


State 73

   85 unary_expression: T_Dec unary_expression .

    $default  reduce using rule 85 (unary_expression)


State 74

   87 unary_expression: T_Dash unary_expression .

    $default  reduce using rule 87 (unary_expression)


State 75

   86 unary_expression: T_Plus unary_expression .

    $default  reduce using rule 86 (unary_expression)


State 76

   54 arithmetic_expression: expression . T_Plus expression
   55                      | expression . T_Dash expression
   56                      | expression . T_Star expression
   57                      | expression . T_Slash expression
   58 relational_expression: expression . T_LeftAngle expression
   59                      | expression . T_RightAngle expression
   60                      | expression . T_LessEqual expression
   61                      | expression . T_GreaterEqual expression
   62 equality_expression: expression . T_EQ expression
   63                    | expression . T_NE expression
   64 logical_expression: expression . T_And expression
   65                   | expression . T_Or expression
   82 primary_expression: T_LeftParen expression . T_RightParen

    T_LessEqual     shift, and go to state 80
    T_GreaterEqual  shift, and go to state 81
    T_EQ            shift, and go to state 82
    T_NE            shift, and go to state 83
    T_LeftAngle     shift, and go to state 84
    T_RightAngle    shift, and go to state 85
    T_And           shift, and go to state 86
    T_Or            shift, and go to state 87
    T_Dash          shift, and go to state 89
    T_Plus          shift, and go to state 90
    T_Star          shift, and go to state 91
    T_Slash         shift, and go to state 92
    T_RightParen    shift, and go to state 110


State 77

    6 single_declaration: type_specifier T_Identifier . T_Semicolon

    T_Semicolon  shift, and go to state 19


State 78

   18 compound_statement_with_scope: T_LeftBrace statement_list T_RightBrace .

    $default  reduce using rule 18 (compound_statement_with_scope)


State 79

   20 statement_list: statement_list statement .

    $default  reduce using rule 20 (statement_list)


State 80

   60 relational_expression: expression T_LessEqual . expression

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    expression                            go to state 111
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 81

   61 relational_expression: expression T_GreaterEqual . expression

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    expression                            go to state 112
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 82

   62 equality_expression: expression T_EQ . expression

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    expression                            go to state 113
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 83

   63 equality_expression: expression T_NE . expression

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35

    expression                            go to state 114
    assignment_expression                 go to state 51
    arithmetic_expression                 go to state 52
    relational_expression                 go to state 53
    equality_expression                   go to state 54
    logical_expression                    go to state 55
    postfix_expression                    go to state 56
    func_call_expression                  go to state 57
    function_call_header_no_parameters    go to state 58
    function_call_header_with_parameters  go to state 59
    function_identifier                   go to state 60
    primary_expression                    go to state 61
    unary_expression                      go to state 62
    constant                              go to state 63


State 84

   58 relational_expression: expression T_LeftAngle . expression

    T_Inc           shift, and go to state 26
    T_Dec           shift, and go to state 27
    T_Dash          shift, and go to state 29
    T_Plus          shift, and go to state 30
    T_LeftParen     shift, and go to state 31
    T_Identifier    shift, and go to state 33
    T_IntConstant   shift, and go to state 34
    T_BoolConstant  shift, and go to state 35
